// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth Create form Form should render correctly 1`] = `
<div
  className="sc-iBPRYJ fxpbUf"
>
  <div
    className="sc-fubCfw hUUoLR"
  >
    <form
      noValidate={true}
      onSubmit={[Function]}
    >
      <label
        className="sc-bdfBwQ cNPxt"
        htmlFor="username"
      >
        <span
          className="sc-gsTCUz gZLQFY"
        >
          Username
        </span>
        <input
          autoComplete="create-username"
          className="sc-eCssSg gpFOfw"
          id="username"
          name="username"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-bdfBwQ cNPxt"
        htmlFor="email"
      >
        <span
          className="sc-gsTCUz gZLQFY"
        >
          Email address
        </span>
        <input
          autoComplete="create-email"
          className="sc-eCssSg gpFOfw"
          id="email"
          name="email"
          onChange={[Function]}
          spellCheck={false}
          type="email"
        />
      </label>
      <label
        className="sc-bdfBwQ cNPxt"
        htmlFor="firstName"
      >
        <span
          className="sc-gsTCUz gZLQFY"
        >
          First name
        </span>
        <input
          className="sc-eCssSg gpFOfw"
          id="firstName"
          name="firstName"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-bdfBwQ cNPxt"
        htmlFor="lastName"
      >
        <span
          className="sc-gsTCUz gZLQFY"
        >
          Last name
        </span>
        <input
          className="sc-eCssSg gpFOfw"
          id="lastName"
          name="lastName"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <button
        className="sc-jSgupP uAGCs"
        disabled={false}
        id="create-button"
        type="submit"
      >
        Create
      </button>
    </form>
  </div>
</div>
`;

exports[`Auth Create form Form should render correctly with groups 1`] = `
<div
  className="sc-iBPRYJ fxpbUf"
>
  <div
    className="sc-fubCfw hUUoLR"
  >
    <form
      noValidate={true}
      onSubmit={[Function]}
    >
      <label
        className="sc-bdfBwQ cNPxt"
        htmlFor="username"
      >
        <span
          className="sc-gsTCUz gZLQFY"
        >
          Username
        </span>
        <input
          autoComplete="create-username"
          className="sc-eCssSg gpFOfw"
          id="username"
          name="username"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-bdfBwQ cNPxt"
        htmlFor="email"
      >
        <span
          className="sc-gsTCUz gZLQFY"
        >
          Email address
        </span>
        <input
          autoComplete="create-email"
          className="sc-eCssSg gpFOfw"
          id="email"
          name="email"
          onChange={[Function]}
          spellCheck={false}
          type="email"
        />
      </label>
      <label
        className="sc-bdfBwQ cNPxt"
        htmlFor="firstName"
      >
        <span
          className="sc-gsTCUz gZLQFY"
        >
          First name
        </span>
        <input
          className="sc-eCssSg gpFOfw"
          id="firstName"
          name="firstName"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-bdfBwQ cNPxt"
        htmlFor="lastName"
      >
        <span
          className="sc-gsTCUz gZLQFY"
        >
          Last name
        </span>
        <input
          className="sc-eCssSg gpFOfw"
          id="lastName"
          name="lastName"
          onChange={[Function]}
          spellCheck={false}
          type="text"
        />
      </label>
      <label
        className="sc-bdfBwQ cNPxt"
        htmlFor="groupCode"
      >
        <span
          className="sc-gsTCUz gZLQFY"
        >
          Select group
        </span>
        <select
          className="sc-pFZIQ dVCTMx"
          id="groupCode"
          name="groupCode"
          onChange={[Function]}
        >
          <option
            value="--"
          >
            -- Select --
          </option>
          <option
            data-qa="GROUP_1_option"
            value="GROUP_1"
          >
            Group 1
          </option>
          <option
            data-qa="GROUP_2_option"
            value="GROUP_2"
          >
            Group 2
          </option>
          <option
            data-qa="GROUP_3_option"
            value="GROUP_3"
          >
            Group 3
          </option>
        </select>
      </label>
      <button
        className="sc-jSgupP uAGCs"
        disabled={false}
        id="create-button"
        type="submit"
      >
        Create
      </button>
    </form>
  </div>
</div>
`;
